# otus-cpp-basics-final-project

./: .gitignore  CMakeLists.txt  Readme.md
.devcontainer/: devcontainer.json  install-dev-tools.sh  requirements.txt
scripts/: gdino2onnx.py  gdino2onnx.sh
src/: colorsdispatcher.hpp  main.cpp  videocapturewrapper.hpp  videowriterwrapper.hpp
src/sort/: CMakeLists.txt  munkres.h
src/yolo/: CMakeLists.txt
